Added ssh configuration

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,4 @@
 [defaults]
-inventory=inventory
+inventory            = inventory
+private_key_file     = '~/.ssh/ansible'
+remote_user          = ansible
