Updated ansible interpreter in configuration file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
 inventory            = inventory
-private_key_file     = '~/.ssh/ansible'
+private_key_file     = /etc/keys/flwitten/ansible
 remote_user          = ansible
+interpreter_python   = /usr/bin/python3
