--- a/section1.yml
+++ b/section1.yml
@@ -14,6 +14,7 @@
             dest: /etc/modprobe.d/cis.conf
             create: true
             regexp: "^install cramfs /bin/true$"
+            line: "install cramfs /bin/true"
             mode: 0600
 
         - name: "1.1.1.1 | Disable cramfs"
