--- a/section1.yml
+++ b/section1.yml
@@ -5,6 +5,7 @@
 
 - name: "1.1 | Filesystem Configuration"
   hosts: all
+  become: true
   
   tasks:
     - name: "1.1.1.1 | Ensure mounting of cramfs filesytem is disabled"
