--- a/section1.yml
+++ b/section1.yml
@@ -38,7 +38,7 @@
             line: "install vfat /bin/true"
             mode: 0600
 
-        - name: "1.1.1.2 | Disable vfat"
+        - name: "1.1.1.2 | vfat | Disable vfat"
           modprobe:
             name: vfat
             state: absent
@@ -58,7 +58,7 @@
             line: "install squashfs /bin/true"
             mode: 0600
 
-        - name: "1.1.1.3 | Disable vfat"
+        - name: "1.1.1.3 | squashfs | Disable vfat"
           modprobe:
             name: squashfs
             state: absent
@@ -67,6 +67,26 @@
         - l1-workstation
         - automated
         - rule_1.1.1.3
+    
+    - name: "1.1.1.4 | Ensure mounting of udf filesytem is disabled"
+      block:
+        - name: "1.1.1.4 | udf | Modprobe Config"
+          lineinfile:
+            dest: /etc/modprobe.d/cis.conf
+            create: true
+            regexp: "^(#)?install udf(\\s|$)"
+            line: "install udf /bin/true"
+            mode: 0600
+
+        - name: "1.1.1.4 | udf | Disable udf"
+          modprobe:
+            name: squashfs
+            state: absent
+      tags:
+        - l1-server
+        - l1-workstation
+        - automated
+        - rule_1.1.1.4
 
 
 
