--- a/section1.yml
+++ b/section1.yml
@@ -88,9 +88,17 @@
         - automated
         - rule_1.1.1.4
 
-    - name: "1.1.2 | Ensure /tmp is configured"
-      debug:
-        var: ansible_mounts
-
-
-
+    - name: |
+        "1.1.2 | Ensure /tmp is configured"
+        "1.1.3 | Ensure nodev option set on /tmp partition"
+        "1.1.4 | Ensure nosuid option set on /tmp partition"
+        "1.1.5 | Ensure noexec option set on /tmp partition"
+      mount:
+        name: '{{ item.mount }}'
+        src: '{{ item.device }}'
+        fstype: '{{ item.fstype }}'
+        state: present
+        opts: defaults,nodev,nosuid,noexec
+      loop:
+        - '{{ ansible_mounts }}'
+      when: item.mount == "/tmp"
