--- a/section1.yml
+++ b/section1.yml
@@ -87,18 +87,19 @@
         - l1-workstation
         - automated
         - rule_1.1.1.4
-
-    - name: |
-        "1.1.2 | Ensure /tmp is configured"
-        "1.1.3 | Ensure nodev option set on /tmp partition"
-        "1.1.4 | Ensure nosuid option set on /tmp partition"
-        "1.1.5 | Ensure noexec option set on /tmp partition"
-      mount:
-        name: '{{ item.mount }}'
-        src: '{{ item.device }}'
-        fstype: '{{ item.fstype }}'
+    
+    - mount: 
+        name: /tmp
+        src: "{{ item.device }}"
+        fstype: "{{ item.fstype }}"
         state: present
         opts: defaults,nodev,nosuid,noexec
-      loop:
-        - '{{ ansible_mounts }}'
+      loop: "{{ ansible_mounts }}"
+      notify: remount tmp
       when: item.mount == "/tmp"
+
+  handlers:
+    - name: remount tmp
+      mount:
+        path: /tmp
+        state: remounted
