--- a/section1.yml
+++ b/section1.yml
@@ -88,7 +88,12 @@
         - automated
         - rule_1.1.1.4
     
-    - mount: 
+    - name: |
+        "1.1.2 | Ensure /tmp is configured"
+        "1.1.3 | Ensure nodev option set on /tmp partition"
+        "1.1.4 | Ensure nosuid option set on /tmp partition"
+        "1.1.5 | Ensure noexec option set on /tmp partition"
+      mount: 
         name: /tmp
         src: "{{ item.device }}"
         fstype: "{{ item.fstype }}"
