--- a/section1.yml
+++ b/section1.yml
@@ -144,10 +144,40 @@
         - l1-server
         - l1-workstation
         - automated
-        - rule_1.1.2
-        - rule_1.1.3
-        - rule_1.1.4
-        - rule_1.1.5
+        - rule_1.1.7
+        - rule_1.1.8
+        - rule_1.1.9
+        - rule_1.1.10
+    
+    - name: "1.1.11 | Ensure separate partition exists for /var/log"
+      mount: 
+        name: /var/log
+        src: "{{ item.device }}"
+        fstype: "{{ item.fstype }}"
+        state: present
+        opts: defaults
+      loop: "{{ ansible_mounts }}"
+      when: item.mount == "/var/log"
+      tags:
+        - l2-server
+        - l2-workstation
+        - automated
+        - rule_1.1.11
+
+    - name: "1.1.12 | Ensure separate partition exists for /var/log/audit"
+      mount: 
+        name: /var/log/audit
+        src: "{{ item.device }}"
+        fstype: "{{ item.fstype }}"
+        state: present
+        opts: defaults
+      loop: "{{ ansible_mounts }}"
+      when: item.mount == "/var/log/audit"
+      tags:
+        - l2-server
+        - l2-workstation
+        - automated
+        - rule_1.1.12
 
   handlers:
     - name: remount tmp
