Fixed typo in handler to remount /dev/shm

--- a/section1.yml
+++ b/section1.yml
@@ -226,7 +226,7 @@
         path: /home
         state: remounted
     
-    - name: remount home
+    - name: remount dev_shm
       mount:
         path: /dev/shm
         state: remounted
